# cs231n

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
assignment1/: features.ipynb  knn.ipynb
assignment1/cs231n/: layers.py
assignment1/cs231n/classifiers/: fc_net.py  linear_classifier.py
assignment2/: ConvolutionalNetworks.ipynb  Dropout.ipynb  FullyConnectedNets.ipynb
assignment2/cs231n/classifiers/: cnn.py
docs/: index.md
docs/assignments/: README.md
docs/lectures/: lecture01.md  lecture02.md  lecture03.md  lecture04.md  lecture05.md  lecture06.md  lecture07.md  lecture08.md  lecture09.md  lecture10.md  lecture11.md  lecture12.md  lecture13.md  lecture14.md  lecture15.md
src/assignment1/: numpy_review.ipynb  svm.ipynb  two_layer_net.ipynb
src/assignment1/cs231n/classifiers/: k_nearest_neighbor.py  linear_svm.py  softmax.py
src/assignment2/: BatchNormalization.ipynb  PyTorch.ipynb
src/assignment2/cs231n/: layer_utils.py  layers.py  optim.py
src/assignment2/cs231n/classifiers/: fc_net.py
src/cs231n.egg-info/: PKG-INFO  SOURCES.txt
